<resources>
    <string name="app_name">Hackage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Splash Screen Strings   -->
    <string name="splash_app_name">HACKAGE</string>
    <string name="splash_tag_line">Anti-Hack for Hackers</string>
    <string name="splash_powered_by">Powered by PWNHUB</string>

    <!-- Login Screen Strings       -->
    <string name="login_forgot_pass">Forgot Password?</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_register">Don\'t have an account?</string>
    <string name="login_sign">Already have an account?</string>
</resources>