<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".splash">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/secret_stencil"
            android:text="@string/splash_app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rational_int"
            android:text="@string/splash_tag_line"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.1"
            android:textSize="25sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rational_int"
            android:text="@string/splash_powered_by"
            android:gravity="bottom"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.3"
            android:textSize="20sp"
            />

    </LinearLayout>
</LinearLayout>