<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/secret_stencil"
            android:text="@string/splash_app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rational_int"
            android:text="@string/splash_tag_line"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.1"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_border"
            android:paddingLeft="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:hint="Username"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_border"
            android:paddingLeft="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="*********"/>

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/login_forgot_pass"
            android:textColor="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gradient_login"
            android:textColor="#ffffff"
            android:text="@string/login_sign_in"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rational_int"
            android:text="@string/login_register"
            android:gravity="bottom"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.1"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/goToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rational_int"
            android:text=" Create One."
            android:textStyle="bold"
            android:gravity="bottom"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.1"
            android:textSize="15sp"
            />

    </LinearLayout>
</LinearLayout>